fix: card-header, overwritable by align-flex-start

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -527,7 +527,7 @@ label[for] {
 		margin-bottom: 0;
 	}
 
-	&.flex-dir-row {
+	&:is(.flex-dir-row) {
 		flex-direction: row;
 		justify-content: flex-start;
 		align-items: center;
